src/stylesheets/MenuBar.scss
.menu-bar {
    display: block;
    z-index: 1;
    position: relative;
    background: #fff;
    /* width: 318px; */
    box-sizing: border-box;
    border-radius: 2px;
    box-shadow: 0 2px 4px rgba(0,0,0,0.2), 0 -1px 0px rgba(0,0,0,0.02);
    cursor: default;
}

.menu-head {
    padding: 4px;
    height: 40px;
    border-bottom: 1px solid transparent;

    &.submenu {
        border-bottom: 1px solid #e5e5e5;
    }
}

.menu-content {
}

.menu-icon {
    user-select: none;
    color: #767676;
    width: auto;
    padding: 8px;
    &:hover {
        color: #464646;
        cursor: pointer;
    }
}

.filter {
    border-radius: 1px;
    &.active {
        background-color: #EEEEEE;
    }
}

.search-container {
    display: inline-block;
    height: 40px;
    /* width: 270px; */
}

.search {
    display: inline;
    border: 0px;
    /* width: 210px; */
    font-size: 16px;
    vertical-align: top;
    padding: 13px 0 9px 20px;
    &:focus {
        outline: none
    }
}

.menu-minimize {
    position: relative;
    /* width: 318px; */
    height: 24px;
    z-index: 2;
    margin: 0 auto;
    background: #f5f5f5;
    border-top: 1px solid #d5d5d5;
    border-radius: 0 0 4px 4px;
    text-align: center;
    box-shadow: 0 2px 4px rgba(0,0,0,0.2), 0 -1px 0px rgba(0,0,0,0.02);
}

